Don't call BlurHelper::clear() for unregistered widgets

BlurHelper::clear() will call QWidget::winId(), which may create a
toplevel window.

BUG: 435129